added i82c55a count demo program
Still doesn't work, investigating.

--- a/Episode0d/Code/Makefile
+++ b/Episode0d/Code/Makefile
@@ -3,12 +3,13 @@
 %.bin : %.asm
 	asm6809 -B $< -o $*.bin
 
-all : i82c55a_test.bin
+all : i82c55a_test.bin i82c55a_count.bin
 
 program :
 	@if [ "$(IMG)" = "" ]; then \
 		echo "binary missing (make program IMG=binary)"; \
 	else \
+		echo eeprog -f $(IMG) -p /dev/ttyUSB0 -D -v -N; \
 		eeprog -f $(IMG) -p /dev/ttyUSB0 -D -v -N; \
 	fi
 
