generate assembly listings

--- a/Episode0b/Code/Makefile
+++ b/Episode0b/Code/Makefile
@@ -1,7 +1,7 @@
 # Makefile for Episode B count program
 
 %.bin : %.asm
-	asm6809 -B $< -o $*.bin
+	asm6809 -l $*.lst -B $< -o $*.bin
 
 all : count.bin
 
@@ -9,4 +9,4 @@ program : count.bin
 	eeprog -f count.bin -p /dev/ttyUSB0 -D -v -N
 
 clean :
-	rm -f *.bin
+	rm -f *.bin *.lst
