some minor code cleanups

--- a/Episode0d/Code/Makefile
+++ b/Episode0d/Code/Makefile
@@ -5,6 +5,8 @@
 
 all : i82c55a_test.bin i82c55a_count.bin
 
+i82c55a_count : i82c55a_count.asm i82c55a.asm ports.asm
+
 program :
 	@if [ "$(IMG)" = "" ]; then \
 		echo "binary missing (make program IMG=binary)"; \
