removed i82c55a_test.asm

--- a/Episode0d/Code/Makefile
+++ b/Episode0d/Code/Makefile
@@ -3,7 +3,7 @@
 %.bin : %.asm
 	asm6809 -l $*.lst -B $< -o $*.bin
 
-all : i82c55a_test.bin i82c55a_count.bin
+all : i82c55a_count.bin
 
 i82c55a_count : i82c55a_count.asm i82c55a.asm ports.asm
 
