still trying to get ACIA working
Forgot to route A0 to the RS input on the ACIA,
fixed, hopefully it will work now.

--- a/Episode0d/Code/Makefile
+++ b/Episode0d/Code/Makefile
@@ -1,13 +1,17 @@
 # Makefile for Episode D
 
+INCLUDES = iodev.asm i82c55a.asm i82c54.asm acia.asm
+
 %.bin : %.asm
 	asm6809 -l $*.lst -B $< -o $*.bin
 
-all : i82c55a_count.bin i82c54_test.bin
+all : i82c55a_count.bin i82c54_test.bin acia_test.bin
 
-i82c55a_count.bin : i82c55a_count.asm i82c55a.asm ports.asm
+i82c55a_count.bin : i82c55a_count.asm $(INCLUDES)
 
-i82c54_test.bin : i82c54_test.asm i82c55a.asm i82c54.asm ports.asm
+i82c54_test.bin : i82c54_test.asm $(INCLUDES)
+
+acia_test.bin : acia_test.asm $(INCLUDES)
 
 program :
 	@if [ "$(IMG)" = "" ]; then \
