added an "offset table" of monitor addresses
This provides a convenient way for programs loaded into
RAM to determine the correct address of monitor routines
and data.  Changed inttest.asm to use the offset table
to resolve the address of the reset_irq3_ff routine.

--- a/Episode12/Code/Makefile
+++ b/Episode12/Code/Makefile
@@ -1,3 +1,11 @@
+# Makefile for Episode 12
+
+# This is a bit confusing since the ".asm" suffix is used for
+# both 6809 and 8051 assembly code, and ".ihx" files could
+# contain either 6809 or 8051 object code.  In the future,
+# it would make sense to use separate directories for 6809
+# and 8051 code.
+
 INCLUDES = iodev.asm i82c55a.asm i82c54.asm acia.asm
 
 %.ihx : %.c
@@ -16,6 +24,12 @@ monitor.bin : monitor.asm $(INCLUDES)
 	asm6809 -l monitor.lst -B monitor.asm -o monitor_temp.bin
 	dd if=monitor_temp.bin of=$@ bs=1024 skip=32
 	rm -f monitor_temp.bin
+
+testprog.ihx : testprog.asm offtab.asm
+	asm6809 -H testprog.asm -o $@
+
+inttest.ihx : inttest.asm offtab.asm
+	asm6809 -H inttest.asm -o $@
 
 clean:
 	rm -rf *.ihx *.lk *.lst *.map *.mem *.rel *.rst *.sym *.asm
