split code into subdirectories
There is now an Include directory allowing the
ROM monitor and the programs to share definitions.

Also, the Keyboard directory has the keyboard
controller firmware from Episode12.

--- a/Code/Monitor/Makefile
+++ b/Code/Monitor/Makefile
@@ -1,6 +1,4 @@
-# Makefile for Episode 13
-
-# Updated ROM monitor with better keyboard support
+# Makefile for ROM monitor
 
 INCLUDES = iodev.asm i82c55a.asm i82c54.asm acia.asm kbd_translate.asm \
 	tms9918a_font.asm
@@ -19,25 +17,11 @@ monitor.bin : monitor.asm $(INCLUDES)
 	dd if=monitor_temp.bin of=$@ bs=1024 skip=32
 	rm -f monitor_temp.bin
 
-testprog.ihx : testprog.asm offtab.asm
-	asm6809 -H testprog.asm -o $@
-
-inttest.ihx : inttest.asm offtab.asm
-	asm6809 -H inttest.asm -o $@
-
-kbdtest.ihx : kbdtest.asm offtab.asm
-	asm6809 -H kbdtest.asm -o $@
-
 kbd_translate.asm : translate.txt build_kbd_table.rb
 	./build_kbd_table.rb < translate.txt > $@
 
 tms9918a_font.asm : tms9918a_font.txt
 	./mk_tms9918a_font.rb
-
-# synth program
-synth.ihx : synth.asm synthkeys.txt gen_synthfreq.rb
-	./gen_synthfreq.rb < synthkeys.txt > freqreg_vals.asm
-	asm6809 -H synth.asm -o $@
 
 clean:
 	rm -rf *.ihx *.bin *.lst
