progress on VRAM test
Doesn't quite work yet, but it's close

--- a/Code/Programs/Makefile
+++ b/Code/Programs/Makefile
@@ -8,7 +8,7 @@
 INCLUDES = ../Include/offtab.asm ../Include/iodev.asm
 
 %.ihx : %.asm
-	asm6809 -H $*.asm -o $*.ihx
+	asm6809 -H $*.asm -s $*.lst -o $*.ihx
 
 all : testprog.ihx inttest.ihx kbdtest.ihx synth.ihx vram_test.ihx
 
