--- a/Code/Monitor/Makefile
+++ b/Code/Monitor/Makefile
@@ -1,12 +1,12 @@
 # Makefile for ROM monitor
 
 # Common includes shared by the ROM monitor and the programs
-COMMON_INCLUDES_BARE = iodev.asm i82c55a.asm i82c54.asm acia.asm
+COMMON_INCLUDES_BARE = iodev.asm i82c55a.asm i82c54.asm acia.asm hwvga.asm
 	
 COMMON_INCLUDES = $(COMMON_INCLUDES_BARE:%=../Include/%)
 
 # Local includes used only by the monitor
-LOCAL_INCLUDES = kbd_translate.asm tms9918a_font.asm
+LOCAL_INCLUDES = kbd_translate.asm tms9918a_font.asm revattr.asm
 
 INCLUDES = $(COMMON_INCLUDES) $(LOCAL_INCLUDES)
 
