dynamically find dependencies for programs
Also, make sure that the assembler source file itself
is included as a dependency.

--- a/Code/Monitor/Makefile
+++ b/Code/Monitor/Makefile
@@ -23,11 +23,11 @@ tms9918a_font.asm : tms9918a_font.txt
 	./mk_tms9918a_font.rb
 
 depend.mak :
-	../mkdeps.rb -v INCLUDES < monitor.asm > depend.mak
+	../mkdeps.rb -v INCLUDES monitor.asm > depend.mak
 
 .PHONY: depend
 depend :
-	../mkdeps.rb -v INCLUDES < monitor.asm > depend.mak
+	../mkdeps.rb -v INCLUDES monitor.asm > depend.mak
 
 clean:
 	rm -rf *.ihx *.bin *.lst depend.mak
