--- a/Code/Programs/Makefile
+++ b/Code/Programs/Makefile
@@ -4,27 +4,28 @@
 # and can be loaded by the ROM monitor into RAM
 # using the "d" (download) command.
 
-# These are the usual includes needed by programs
-INCLUDES = ../Include/offtab.asm ../Include/iodev.asm
+PROGS = testprog.ihx inttest.ihx kbdtest.ihx synth.ihx vram_test.ihx
 
 %.ihx : %.asm
 	asm6809 -H $*.asm -s $*.lst -o $*.ihx
 
-all : testprog.ihx inttest.ihx kbdtest.ihx synth.ihx vram_test.ihx
-
-testprog.ihx : testprog.asm $(INCLUDES)
-
-inttest.ihx : inttest.asm $(INCLUDES)
-
-kbdtest.ihx : kbdtest.asm $(INCLUDES)
-
-# synth program
-synth.ihx : synth.asm freqreg_vals.asm $(INCLUDES)
+all : $(PROGS)
 
 freqreg_vals.asm : gen_synthfreq.rb synthkeys.txt
 	./gen_synthfreq.rb < synthkeys.txt > freqreg_vals.asm
 
 vram_test.ihx : vram_test.asm $(INCLUDES)
 
+.PHONY: depend
+depend :
+	rm -f depend.mak
+	for f in $(PROGS); do ../mkdeps.rb $$f $$(basename $$f .ihx).asm >> depend.mak; echo '' >> depend.mak; done
+
+depend.mak :
+	rm -f depend.mak
+	for f in $(PROGS); do ../mkdeps.rb $$f $$(basename $$f .ihx).asm >> depend.mak; echo '' >> depend.mak; done
+
 clean:
 	rm -rf *.ihx *.bin *.lst freqreg_vals.asm
+
+include depend.mak
