--- a/Code/Programs/Makefile
+++ b/Code/Programs/Makefile
@@ -4,7 +4,8 @@
 # and can be loaded by the ROM monitor into RAM
 # using the "d" (download) command.
 
-PROGS = testprog.ihx inttest.ihx kbdtest.ihx synth.ihx vram_test.ihx hwvga_test.ihx
+PROGS = testprog.ihx inttest.ihx kbdtest.ihx synth.ihx vram_test.ihx hwvga_test.ihx \
+	ingo_photo.ihx
 
 %.ihx : %.asm
 	asm6809 -H $*.asm -s $*.lst -o $*.ihx
